# basic-3D-scanner

./: CMakeLists.txt  PCLOperations.h  capture.cpp  capture.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
